--- a/loan-dev.properties
+++ b/loan-dev.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bank-loan?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql:3306/bank-loan?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=root
 
 
 build.version=1.0.1
