--- a/account-dev.properties
+++ b/account-dev.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bank-account?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql:3306/bank-account?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=root
 
 application.active.profile=dev
