--- a/account-dev.properties
+++ b/account-dev.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://mysql:3306/bank-account?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${DB_NAME:bank-account}?createDatabaseIfNotExist=true
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:1234}
+
 
 application.active.profile=dev
