--- a/card-dev.properties
+++ b/card-dev.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://mysql:3306/bank-card?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${DB_NAME:bank-card}?createDatabaseIfNotExist=true
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:1234}
 
 
 build.version=1.0.1
